--- a/frontend/css/user/header.css
+++ b/frontend/css/user/header.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 70px;
+  height: 80px;
   background-color: #ffffff;
   z-index: 1000;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -19,12 +19,20 @@
 
 .form-control {
   max-width: none;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  color: #333;
+  border-radius: 25px;
 }
 
 .btn .fas.fa-bars {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #ff9800; /* 메뉴 버튼을 귀여운 주황색으로 변경 */
 }
 .btn.dropdown-toggle {
   margin-right: 50px;
+}
+.logNBotton {
+  margin-left: auto;
+  margin-right: 200px;
 }
