--- a/frontend/view/user/cart.html
+++ b/frontend/view/user/cart.html
@@ -109,10 +109,10 @@
           </button>
         </div>
       </div>
+      <footer-component></footer-component>
     </div>
-    <!-- 헤더js불러오기 -->
+    <script src="/js/Footer.js"></script>
     <script src="/js/Header.js"></script>
-    <!-- Vue 인스턴스 및 Axios 요청을 포함한 외부 JavaScript 파일 불러오기 -->
     <script src="/js/user/cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
