--- a/frontend/view/owner/reserve.html
+++ b/frontend/view/owner/reserve.html
@@ -211,7 +211,7 @@
                     v-if="currentPage > 1"
                     @click="changePage(currentPage - 1)"
                   >
-                    <a class="page-link" href="#" aria-label="Previous">
+                    <a class="page-link" aria-label="Previous">
                       <span aria-hidden="true">&laquo;</span>
                     </a>
                   </li>
@@ -221,14 +221,14 @@
                     :key="page"
                     @click="changePage(page)"
                   >
-                    <a class="page-link" href="#">{{page}}</a>
+                    <a class="page-link">{{page}}</a>
                   </li>
                   <li
                     class="page-item"
                     v-if="currentPage < totalPages"
                     @click="changePage(currentPage + 1)"
                   >
-                    <a class="page-link" href="#" aria-label="Next">
+                    <a class="page-link" aria-label="Next">
                       <span aria-hidden="true">&raquo;</span>
                     </a>
                   </li>
