fullCalendar 데이터 할당, reserve.html 예약 가능시간  검색기능 추가, 매출 데이터수정

--- a/frontend/view/owner/index.html
+++ b/frontend/view/owner/index.html
@@ -120,6 +120,7 @@
                         <span v-else-if="reserve.statusCodeId === 2">승인</span>
                         <span v-else-if="reserve.statusCodeId === 3">취소</span>
                         <span v-else-if="reserve.statusCodeId === 4">완료</span>
+                        <span v-else-if="reserve.statusCodeId === 5">리뷰 작성 완료</span>
                       </td>
                       <td class="status-button">
                         <button
